--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,11 @@ body {
   box-shadow: 0px 0px 15px rgba(0,0,0,0.5);
 }
 .logo {
-  width: 120px;       /* tamaño ajustable */
-  margin-bottom: 15px;
+  width: 300px;       /* tamaño ajustable */
+  margin: 0 auto 15px; /* arriba 0, lados auto (centro), abajo 15px */
+  display: block;      /* necesario para que margin auto funcione */
 }
+
 
 h1 {
   text-align: center;
